--- a/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Caching\BaseCacheKey.cs" />
     <Compile Include="Caching\ICacheService.cs" />
     <Compile Include="Mapping\IMapper.cs" />
+    <Compile Include="Repositories\IAgencyUserRepository.cs" />
     <Compile Include="Repositories\IAuditRepository.cs" />
     <Compile Include="Repositories\IProviderRepository.cs" />
     <Compile Include="Repositories\IProviderSiteRepository.cs" />
