--- a/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
@@ -133,6 +133,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\AgencyUser\AgencyUserProviderBuilder.cs" />
+    <Compile Include="Providers\AgencyUser\AgencyUserProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -141,9 +143,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
+      <Project>{2C577447-2405-46B3-8065-613A19A58541}</Project>
+      <Name>SFA.Apprenticeships.Application.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Organisation\SFA.Apprenticeships.Application.Organisation.csproj">
       <Project>{1B92E84D-F15A-4521-BDB9-2BE321236167}</Project>
       <Name>SFA.Apprenticeships.Application.Organisation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
+      <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
+      <Name>SFA.Apprenticeships.Domain.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Web.Common.UnitTests\SFA.Apprenticeships.Web.Common.UnitTests.csproj">
       <Project>{3ca36139-bbdd-4305-b15a-e9500606b672}</Project>
@@ -154,7 +164,7 @@
       <Name>SFA.Apprenticeships.Web.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Web.Manage\SFA.Apprenticeships.Web.Manage.csproj">
-      <Project>{AF7E6460-86F4-40D6-8C46-AB97C283479B}</Project>
+      <Project>{456a5d7b-80bb-486a-b521-861691836145}</Project>
       <Name>SFA.Apprenticeships.Web.Manage</Name>
     </ProjectReference>
   </ItemGroup>
@@ -163,6 +173,9 @@
       <Project>{af7e6460-86f4-40d6-8c46-ab97c283479b}</Project>
       <Name>SFA.Apprenticeships.Web.Manage</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mediators\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
