--- a/src/SFA.Apprenticeships.Web.Common.UnitTests/SFA.Apprenticeships.Web.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Common.UnitTests/SFA.Apprenticeships.Web.Common.UnitTests.csproj
@@ -135,6 +135,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Builders\ClaimsPrincipalBuilder.cs" />
     <Compile Include="Builders\HttpContextBuilder.cs" />
     <Compile Include="Builders\HttpResponseBuilder.cs" />
     <Compile Include="Framework\DateDisplayExtensionsTests.cs" />
