Wtrealms for non local instances

--- a/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <appSettings>
     <add key="Environment" value="LOCAL" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:Wtrealm" value="https://Manage.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:Wtrealm" value="https://manage.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   
   <nlog:nlog>
