--- a/src/SFA.Apprenticeships.Web.Manage/Web.Demo.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Demo.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <appSettings>
     <add key="Environment" value="DEMO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:Wtrealm" value="http://sfa-Manage-demo.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:Wtrealm" value="http://sfa-manage-demo.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.webServer>
