--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -25,6 +25,7 @@
     <add key="Environment" value="Debug"/>
     <add key="ida:MetadataAddress" value="https://naspreacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml"/>
     <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/"/>
+    <add key="ida:SessionTimeout" value="60"/>
     <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
   </appSettings>
   <!--
