Setting session timeout to 15 minutes for SIT

--- a/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Local.config
@@ -4,6 +4,7 @@
   <appSettings>
     <add key="Environment" value="LOCAL" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:Wtrealm" value="https://manage.findapprenticeship.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   
   <nlog:nlog>
