--- a/src/SFA.Apprenticeships.Web.Manage/Web.Demo.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Demo.config
@@ -4,6 +4,7 @@
   <appSettings>
     <add key="Environment" value="DEMO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:Wtrealm" value="http://sfa-manage-demo.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.webServer>
