--- a/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.Sit.config
@@ -4,6 +4,7 @@
   <appSettings>
     <add key="Environment" value="SIT" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:Wtrealm" value="http://sfa-manage-sit.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:SessionTimeout" value="15" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.webServer>
