--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -4,6 +4,7 @@
   <appSettings>
     <add key="Environment" value="PROD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:Wtrealm" value="http://sfa-recruit-prod.cloudapp.net/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
   <system.webServer>
