US810: page 1 (wip).

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -122,8 +122,10 @@
     <Compile Include="Users\UserCredentials.cs" />
     <Compile Include="Vacancies\Apprenticeships\ApprenticeshipSearchMode.cs" />
     <Compile Include="Vacancies\Apprenticeships\ApprenticeshipSearchResponse.cs" />
+    <Compile Include="Vacancies\ProviderVacancies\Apprenticeship\ApprenticeshipVacancy.cs" />
     <Compile Include="Vacancies\Apprenticeships\ApprenticeshipVacancyDetail.cs" />
     <Compile Include="Vacancies\Traineeships\TraineeshipVacancyDetail.cs" />
+    <Compile Include="Vacancies\ProviderVacancies\Vacancy.cs" />
     <Compile Include="Vacancies\VacancyDetail.cs" />
     <Compile Include="Vacancies\VacancyHelper.cs" />
     <Compile Include="Vacancies\VacancyStatuses.cs" />
