--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -137,9 +137,14 @@
     <Compile Include="Mediators\ProviderUser\VerifyEmailAddressTests.cs" />
     <Compile Include="Mediators\ProviderUser\UpdateUserTests.cs" />
     <Compile Include="Mediators\Provider\ProviderMediatorTests.cs" />
+    <Compile Include="Mediators\VacancyPosting\IndexTests.cs" />
+    <Compile Include="Mediators\VacancyPosting\TestsBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderBuilder.cs" />
     <Compile Include="Providers\ProviderUser\ProviderUserProviderTests.cs" />
+    <Compile Include="Providers\VacancyPosting\GetNewVacancyTests.cs" />
+    <Compile Include="Providers\VacancyPosting\SaveVacancyTests.cs" />
+    <Compile Include="Providers\VacancyPosting\TestBase.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
   </ItemGroup>
