--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -300,7 +300,7 @@
     <Compile Include="Mediators\ProviderUser\ProviderUserMediatorCodes.cs" />
     <Compile Include="Mediators\Provider\IProviderMediator.cs" />
     <Compile Include="Controllers\ProviderUserController.cs" />
-    <Compile Include="Controllers\RecuitmentControllerBase.cs" />
+    <Compile Include="Controllers\RecruitmentControllerBase.cs" />
     <Compile Include="Controllers\ProviderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -326,13 +326,15 @@
     <Compile Include="Validators\Provider\ProviderSiteViewModelValidator.cs" />
     <Compile Include="Validators\Provider\ProviderViewModelValidator.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
+    <Compile Include="ViewModels\Frameworks\FrameworkSelectItemViewModel.cs" />
+    <Compile Include="ViewModels\Frameworks\SectorSelectItemViewModel.cs" />
     <Compile Include="ViewModels\ProviderUser\VerifyEmailViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchMode.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchResponseViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModelMessages.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteSearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\RecuitmentUserContext.cs" />
+    <Compile Include="Providers\RecruitmentUserContext.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Provider\ProviderSiteViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderViewModel.cs" />
