--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Providers\VacancyPosting\TestBase.cs" />
     <Compile Include="Validators\Providers\ProviderSiteSearchViewModelValidatorTests.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserViewModelValidatorTests.cs" />
+    <Compile Include="Validators\VacancyPosting\NewVacancyViewModelValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
