--- a/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
+++ b/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
@@ -1,18 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Local</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{91DB99C3-50A9-4DED-AB90-2FF94D0B130E}</ProjectGuid>
+    <ProjectGuid>{CE04B708-FF21-41D4-B796-A36EDCE2960D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SFA.Apprenticeships.Domain.Interfaces</RootNamespace>
-    <AssemblyName>SFA.Apprenticeships.Domain.Interfaces</AssemblyName>
+    <RootNamespace>SFA.Apprenticeships.Application.VacancyPosting</RootNamespace>
+    <AssemblyName>SFA.Apprenticeships.Application.VacancyPosting</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local|AnyCPU' ">
@@ -76,60 +74,37 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CuttingEdge.Conditions">
+      <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Configuration\IConfigurationService.cs" />
-    <Compile Include="Messaging\IJobControlQueue.cs" />
-    <Compile Include="Messaging\IServiceBus.cs" />
-    <Compile Include="Messaging\IServiceBusSubscriber.cs" />
-    <Compile Include="Messaging\ScheduledJobQueues.cs" />
-    <Compile Include="Messaging\ServiceBusMessageStates.cs" />
-    <Compile Include="Messaging\ServiceBusTopicSubscriptionAttribute.cs" />
-    <Compile Include="Messaging\StorageQueueMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Caching\CacheDuration.cs" />
-    <Compile Include="Caching\BaseCacheKey.cs" />
-    <Compile Include="Caching\ICacheService.cs" />
-    <Compile Include="Mapping\IMapper.cs" />
-    <Compile Include="Repositories\IAgencyUserRepository.cs" />
-    <Compile Include="Repositories\IApprenticeshipVacancyRepository.cs" />
-    <Compile Include="Repositories\IAuditRepository.cs" />
-    <Compile Include="Repositories\IProviderRepository.cs" />
-    <Compile Include="Repositories\IProviderSiteRepository.cs" />
-    <Compile Include="Repositories\ISavedSearchAlertRepository.cs" />
-    <Compile Include="Repositories\IApplicationStatusAlertRepository.cs" />
-    <Compile Include="Repositories\IContactMessageRepository.cs" />
-    <Compile Include="Repositories\ISavedSearchRepository.cs" />
-    <Compile Include="Repositories\ITraineeshipApplicationRepository.cs" />
-    <Compile Include="Repositories\IApprenticeshipApplicationRepository.cs" />
-    <Compile Include="Repositories\IAuthenticationRepository.cs" />
-    <Compile Include="Repositories\IExpiringApprenticeshipApplicationDraftRepository.cs" />
-    <Compile Include="Repositories\IProviderUserRepository.cs" />
-    <Compile Include="Repositories\IUserRepository.cs" />
-    <Compile Include="Repositories\ICandidateRepository.cs" />
-    <Compile Include="Repositories\IWriteRepository.cs" />
-    <Compile Include="Repositories\IReadRepository.cs" />
+    <Compile Include="VacancyPostingService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
+      <Project>{2C577447-2405-46B3-8065-613A19A58541}</Project>
+      <Name>SFA.Apprenticeships.Application.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
-      <Project>{4c2be232-4dbd-44d0-b427-0450e2d857a5}</Project>
+      <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Interfaces\SFA.Apprenticeships.Domain.Interfaces.csproj">
+      <Project>{91DB99C3-50A9-4DED-AB90-2FF94D0B130E}</Project>
+      <Name>SFA.Apprenticeships.Domain.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
