--- a/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
+++ b/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Local</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2C577447-2405-46B3-8065-613A19A58541}</ProjectGuid>
+    <ProjectGuid>{DD096F97-415D-4676-9F90-7AEE60213F49}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SFA.Apprenticeships.Application.Interfaces</RootNamespace>
-    <AssemblyName>SFA.Apprenticeships.Application.Interfaces</AssemblyName>
+    <RootNamespace>SFA.Apprenticeships.Application.Employer</RootNamespace>
+    <AssemblyName>SFA.Apprenticeships.Application.Employer</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -74,6 +74,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CuttingEdge.Conditions, Version=1.2.0.11174, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -81,59 +85,26 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Applications\ErrorCodes.cs" />
-    <Compile Include="Candidates\ErrorCodes.cs" />
-    <Compile Include="Communications\CommunicationChannels.cs" />
-    <Compile Include="Communications\CommunicationRequestHelpers.cs" />
-    <Compile Include="Communications\ErrorCodes.cs" />
-    <Compile Include="Communications\IProviderCommunicationService.cs" />
-    <Compile Include="Communications\SubscriptionTypes.cs" />
-    <Compile Include="Employers\IEmployerService.cs" />
-    <Compile Include="Locations\ErrorCodes.cs" />
-    <Compile Include="Logging\ILogService.cs" />
-    <Compile Include="Messaging\BaseRequest.cs" />
-    <Compile Include="Communications\CommunicationToken.cs" />
-    <Compile Include="Messaging\ErrorCodes.cs" />
-    <Compile Include="Communications\MessageTypes.cs" />
-    <Compile Include="Communications\CommunicationTokens.cs" />
-    <Compile Include="Communications\CommunicationRequest.cs" />
-    <Compile Include="Communications\EmailRequest.cs" />
-    <Compile Include="Communications\ICommunicationService.cs" />
-    <Compile Include="Communications\IEmailDispatcher.cs" />
-    <Compile Include="Communications\ISmsDispatcher.cs" />
-    <Compile Include="Communications\SmsRequest.cs" />
-    <Compile Include="Organisations\IOrganisationService.cs" />
-    <Compile Include="Providers\IProviderService.cs" />
-    <Compile Include="ReferenceData\IReferenceDataService.cs" />
-    <Compile Include="Search\AggregationResult.cs" />
-    <Compile Include="Users\IProviderUserAccountService.cs" />
-    <Compile Include="Users\IUserProfileService.cs" />
-    <Compile Include="Vacancies\ApprenticeshipSearchField.cs" />
-    <Compile Include="Vacancies\VacancySearchParametersBase.cs" />
-    <Compile Include="Vacancies\ApprenticeshipSearchParameters.cs" />
-    <Compile Include="Search\SearchParametersBase.cs" />
-    <Compile Include="Vacancies\TraineeshipSearchParameters.cs" />
-    <Compile Include="Users\ErrorCodes.cs" />
-    <Compile Include="Users\ICodeGenerator.cs" />
-    <Compile Include="Users\IUserAccountService.cs" />
-    <Compile Include="Candidates\ICandidateService.cs" />
-    <Compile Include="Locations\ILocationSearchService.cs" />
+    <Compile Include="EmployerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search\SearchResults.cs" />
-    <Compile Include="Users\IAuthenticationService.cs" />
-    <Compile Include="Vacancies\ErrorCodes.cs" />
-    <Compile Include="Vacancies\VacancySearchSortType.cs" />
-    <Compile Include="Vacancies\IVacancySearchService.cs" />
-    <Compile Include="Vacancies\TraineeshipSearchResponse.cs" />
-    <Compile Include="VacancyPosting\IVacancyPostingService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
+      <Project>{2C577447-2405-46B3-8065-613A19A58541}</Project>
+      <Name>SFA.Apprenticeships.Application.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
-      <Project>{4c2be232-4dbd-44d0-b427-0450e2d857a5}</Project>
+      <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Interfaces\SFA.Apprenticeships.Domain.Interfaces.csproj">
+      <Project>{91DB99C3-50A9-4DED-AB90-2FF94D0B130E}</Project>
+      <Name>SFA.Apprenticeships.Domain.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
