--- a/src/SFA.Apprenticeships.Infrastructure.TacticalDataServices/SFA.Apprenticeships.Infrastructure.TacticalDataServices.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.TacticalDataServices/SFA.Apprenticeships.Infrastructure.TacticalDataServices.csproj
@@ -111,7 +111,9 @@
     <Compile Include="Configuration\TacticalDataServivcesConfiguration.cs" />
     <Compile Include="FrameworkDataProvider.cs" />
     <Compile Include="IoC\TacticalDataServicesRegistry.cs" />
+    <Compile Include="LegacyEmployerProvider.cs" />
     <Compile Include="LegacyProviderProvider.cs" />
+    <Compile Include="Models\Employer.cs" />
     <Compile Include="Models\Framework.cs" />
     <Compile Include="Models\Occupation.cs" />
     <Compile Include="Models\Provider.cs" />
